overflow-x added to prevent side scroll of canvas

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,6 +1,7 @@
 body {
   /* background-color: #f5f6f7; */
   background-color: #fff;
+  overflow-x: hidden;
 }
 
 h1 {
